--- a/styles.css
+++ b/styles.css
@@ -1,72 +1,71 @@
 @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600&display=swap');
+@font-face {  
+  font-family: "Runalto";
+  src: url(fonts/Runalto.otf) format("opentype");
+}
+
 
 :root{
-    background-color: black;
+    background-color: rgb(18, 18, 18);
     
     
 }
 
-header{
-    border-radius: 0%;
-    background-color: rgb(32, 32, 32);
-    
+h2{
+    font-family: Runalto;
+    color: #e7e7e7;
+    text-align: center;
+    font-size: 2em;
 }
 
-.navbar{
-    width: device-width;
-    margin: auto;
-    padding-left: 25px;
-    padding-right: 25px;
-    display: flex;
-    align-items: right;
-    padding: 20px;
-    
+.slideshow img{
+    overflow: hidden;
+    width: 100%;
+    max-height: 600px;
+    object-fit: cover;
 }
 
-nav{
-    flex: 1;
-    text-align: right;
-    font-family: 'Plus Jakarta Sans', sans-serif;
-    font-weight: 400;
+  
+.price {
+    color: grey;
+    font-size: 22px;
 }
- 
-.logo img{
-    width: 300px;
-    justify-content: left;
-    
-}
-
-   
-nav ul :not(.menuico){
-    display: inline-block;
-    list-style-type: none;
-
-}
-
-.menuico{
-    display: inline-block;
-    padding-right: -10;
-}
-
-nav ul span ai{
-    display: inline-block;
-    margin-left: 10px;
-    margin-right: 10px;
-    display: inline-block;
-    vertical-align: middle;
-}
-
-nav ul li{
-    display: inline-block;
-    margin-left: 30px;
-    margin-right: 30px;
-    display: inline-block;
-    vertical-align: middle;
-}
-
-
-
-a{
-    text-decoration: none;
+  
+.card button {
+    border: none;
+    outline: 0;
+    padding: 12px;
     color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+    font-size: 18px;
 }
+  
+.cards {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);   
+    grid-auto-rows: auto;  
+    grid-gap: 5rem;
+    margin: 50px;
+}
+     
+     
+.card {  
+    border: 2px solid #e7e7e7;   
+    border-radius: 4px;   
+    padding: .5rem; 
+     
+}
+
+.cards img{
+    max-height: 300px;
+    object-fit: cover;
+}
+
+footer{
+    background-color: #000;
+    height: 200px;
+}
+  
