--- a/navbar.css
+++ b/navbar.css
@@ -2,10 +2,12 @@
 
 
 header{
+    position: relative;
+    z-index: 100;
     width: device-width;
-    border-radius: 0%;
     background-color: rgb(18, 18, 18);
-    
+    border: none;
+
 }
 
 .sidenav {
@@ -39,8 +41,8 @@ header{
   /* Position and style the close button (top right corner) */
   .sidenav .closebtn {
     position: absolute;
-    top: 30px;
-    right: 45px;
+    top: 23px;
+    right: 36px;
     font-size: 36px;
     margin-left: 50px;
   }
@@ -90,6 +92,7 @@ nav ul {
 }
 
 .menuico{
+    cursor: pointer;
     display: inline-block;
 }
 
@@ -99,6 +102,7 @@ nav ul span ai{
     margin-right: 10px;
     display: inline-block;
     vertical-align: middle;
+    
 }
 
 
@@ -107,10 +111,24 @@ nav ul li{
     margin-left: 30px;
     margin-right: 30px;
     vertical-align: middle;
+    
 }
 
 
 a{
     text-decoration: none;
     color: white;
+    cursor: pointer;
+
+}
+
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+  }
+  
+  /* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
+.sticky + .content {
+    padding-top: 60px;
 }
