--- a/styles.css
+++ b/styles.css
@@ -5,9 +5,13 @@
 }
 
 
+body{
+    margin: 0;
+    padding: 0;
+}
 :root{
-    background-color: rgb(18, 18, 18);
-    
+    background-color: rgb(28, 28, 28);
+    border: none;
     
 }
 
@@ -23,49 +27,65 @@ h2{
     width: 100%;
     max-height: 600px;
     object-fit: cover;
+    
 }
 
+/* .parallax img{
+    width: 100%;
+    height: 100vh;
+    background-image: url("images/slide-1-home.jpg");
+    background-size: cover;
+    background-attachment: fixed;
+} */
+
   
-.price {
-    color: grey;
-    font-size: 22px;
+.description {
+    color: rgb(255, 255, 255);
+    padding: 20px;
+    font-size: 16px;
+    text-align: center;
+    font-family: 'Plus Jakarta Sans', sans-serif;
+    font-weight: 300;
 }
   
 .card button {
-    border: none;
     outline: 0;
     padding: 12px;
     color: white;
-    background-color: #000;
+    background-color: rgb(0, 0, 0);
+    border-color: rgb(255, 255, 255);
     text-align: center;
     cursor: pointer;
-    width: 100%;
-    font-size: 18px;
+    width: 70%;
+    font-size: 20px;
+    margin-left: 50px;
+    font-family: Plus Jakarta Sans;
+    vertical-align: center;
+    margin-bottom: 30px;
+
 }
   
 .cards {
     display: grid;
     grid-template-columns: repeat(3, 1fr);   
     grid-auto-rows: auto;  
-    grid-gap: 5rem;
-    margin: 50px;
+    grid-gap: 3rem;
+    margin-left: 100px;
+    margin-right: 100px;
+
+    filter: drop-shadow(0 0 0.75rem rgba(0, 0, 0, 0.517));
+    
 }
      
      
 .card {  
-    border: 2px solid #e7e7e7;   
-    border-radius: 4px;   
-    padding: .5rem; 
-     
+    background-color: #000;     
 }
 
 .cards img{
     max-height: 300px;
     object-fit: cover;
+    object-position: bottom;
+
 }
 
-footer{
-    background-color: #000;
-    height: 200px;
-}
-  
