--- a/styles.css
+++ b/styles.css
@@ -19,13 +19,15 @@ h2{
     font-family: Runalto;
     color: #e7e7e7;
     text-align: center;
-    font-size: 2em;
+    font-size: 3em;
+    margin-bottom: 50px;
+    font-weight: 100;
 }
 
 .slideshow img{
     overflow: hidden;
     width: 100%;
-    max-height: 600px;
+    max-height: 90vh;
     object-fit: cover;
     
 }
@@ -48,7 +50,12 @@ h2{
     font-weight: 300;
 }
   
+.featuredbutton{
+    display: flex;
+    justify-content: center;
+}
 .card button {
+    display: flex;
     outline: 0;
     padding: 12px;
     color: white;
@@ -56,33 +63,37 @@ h2{
     border-color: rgb(255, 255, 255);
     text-align: center;
     cursor: pointer;
-    width: 70%;
+    width: 100%%;
     font-size: 20px;
-    margin-left: 50px;
+    justify-content: center;
     font-family: Plus Jakarta Sans;
     vertical-align: center;
     margin-bottom: 30px;
+    
 
 }
   
 .cards {
     display: grid;
+    justify-content: center;
     grid-template-columns: repeat(3, 1fr);   
     grid-auto-rows: auto;  
-    grid-gap: 3rem;
+    grid-gap: 40px;
     margin-left: 100px;
+    max-width: 100%;
+    align-items: center;
     margin-right: 100px;
-
     filter: drop-shadow(0 0 0.75rem rgba(0, 0, 0, 0.517));
     
 }
      
      
 .card {  
-    background-color: #000;     
+    background-color: #000; 
+    
 }
 
-.cards img{
+.cardimage{
     max-height: 300px;
     object-fit: cover;
     object-position: bottom;
