--- a/footer.css
+++ b/footer.css
@@ -2,9 +2,9 @@
 
 h3{
     color: white;
-    font-family: 'Plus Jakarta Sans', sans-serif;
+    font-family: 'Runalto', sans-serif;
     font-weight: 400;
-    font-size: 20px;
+    font-size: 25px;
 }
 
 h4{
@@ -12,20 +12,106 @@ h4{
     font-family: 'Plus Jakarta Sans', sans-serif;
     font-weight: 300;
     font-size: 12px;
+    max-width: 60%;
 }
 
-.footer{
+.footer1{
     display: grid;
-    grid-template-columns: 2fr 1fr; 
+    grid-template-columns: 1fr 1fr; 
     grid-auto-rows: auto;  
-    margin: 100px;
 
 }
 
 footer{
     background-color: #000;
-    height: 200px;
+    height: max-content;
+    padding: 100px;
+    margin-top: 100px;
 }
 
+hr.divider-1{
+    border-top: 0.1px solid #bbb;
+    margin-bottom: 60px;
+    opacity: 60%;
+}
 
+hr.divider-2{
+    border-top: 0.1px solid #bbb;
+    margin-bottom: 60px;
+    margin-top: 50px;
+    opacity: 60%;
+}
   
+
+
+form{
+    display: flex;
+    margin-top: -10px;
+    background-color: white;
+    width: 100%;
+   
+}
+form input{
+    border: 0;
+    border-radius: 0;
+    border-width: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Plus Jakarta Sans', sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    padding: 3px;
+    vertical-align: middle;
+    width: 100%;
+    padding-right: 10px;
+
+
+}
+form input:focus{
+    outline: none;
+}
+
+form img{
+    width: 30px;
+    vertical-align: middle;
+    filter: opacity(50%);
+    padding: 5px;
+    padding-left: 10px;
+    padding-right: 5px;
+}
+
+.signuplayout{
+    display: grid;
+    grid-template-columns: 2.7fr 1fr;
+    width: max-content;
+    
+}
+
+.signupbtn{
+    margin-top: -10px;
+    color: rgb(0, 0, 0);
+    width: 110px;
+    font-size: 18px;
+    background-color: rgb(199,172,104);
+    margin-left: 10px;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Plus Jakarta Sans', sans-serif;
+    font-weight: 400;
+    padding-top: 8px;
+    cursor: pointer;
+
+
+}
+.signupbtn:hover{
+    background-color: white;
+
+}
+
+.payfooter ul li{
+    display: inline;
+    padding-right: 5px;
+}
+
+.payfooter{
+    margin-left: -40px;
+}
