--- a/navbar.css
+++ b/navbar.css
@@ -1,8 +1,36 @@
 @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600&display=swap');
 
 
+/* notice anouncement banner */
+.notice{
+  background-color: rgb(199,172,104);
+  width: 100%;  
+  position: sticky;
+  top: 0%;
+  z-index: 200;
+  height: 4vh;
+  font-family: 'Plus Jakarta Sans', sans-serif;
+  font-weight: 400;
+  text-align: center;
+  color: #f1f1f1;
+  vertical-align: middle;
+}
+
+
+.notice a{
+  color: #ffffff;
+  text-decoration: none;
+  vertical-align: middle;
+  font-size: 0.8em;
+  letter-spacing: 1px;
+
+
+}
+
 header{
-    position: relative;
+    position: sticky;
+    margin-top: 500px;
+    top: 4vh; 
     z-index: 100;
     width: device-width;
     background-color: rgb(18, 18, 18);
@@ -11,45 +39,52 @@ header{
 }
 
 .sidenav {
-    height: 100%; /* 100% Full-height */
-    width: 0; /* 0 width - change this with JavaScript */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Stay on top */
-    top: 0; /* Stay at the top */
+    height: 100vh; 
+    width: 0; /* width determined by the JavaScript */
+    position: fixed;
+    z-index: 5; 
+    top: 2.1vh; 
     right:0;
-    background-color: #111; /* Black*/
-    overflow-x: hidden; /* Disable horizontal scroll */
-    padding-top: 60px; /* Place content 60px from the top */
-    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
-  }
+    background-color: rgb(17, 17, 17); 
+    overflow-x: hidden; /* stops horizontal scrolling */
+    padding-top: -50px; 
+    transition: 0.5s; /* animation transition time */
+}
   
   /* The navigation menu links */
-  .sidenav a {
-    padding: 8px 8px 8px 32px;
+.sidenav a {
+    font-family: 'Plus Jakarta Sans', sans-serif;
+    font-weight: 500;
+    padding: 8px 8px 30px 50px; 
     text-decoration: none;
-    font-size: 25px;
+    font-size: 1.3em;
     color: #818181;
     display: block;
     transition: 0.3s;
-  }
+}
+
+.sidemenu{
+  margin: 60px;
+  margin-left: 20px;
+  margin-bottom: 200px;
+}
+  /* hoave navigation links change colour */
+.sidenav a:hover {
+  color: #f1f1f1;
+}
   
-  /* When you mouse over the navigation links, change their color */
-  .sidenav a:hover {
-    color: #f1f1f1;
-  }
-  
-  /* Position and style the close button (top right corner) */
+  /* side navigation close button */
   .sidenav .closebtn {
-    position: absolute;
-    top: 23px;
-    right: 36px;
+    z-index: 200;
+    position: sticky;
+    top: 4vh;
+    margin-left: 287px;
     font-size: 36px;
-    margin-left: 50px;
   }
   
   /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
   #main {
-    transition: margin-right .5s;
+    transition: margin-left .5s;
     padding: 20px;
   }
   
@@ -81,8 +116,11 @@ nav{
 .logo img{
     width: 300px;
     justify-content: left;
+    cursor: pointer;
     
 }
+
+
 
    
 nav ul {
@@ -91,10 +129,15 @@ nav ul {
     padding-top: 5px;
 }
 
+nav ul li:hover {
+  color: #ff0000;
+}
 .menuico{
+    
     cursor: pointer;
     display: inline-block;
 }
+
 
 nav ul span ai{
     display: inline-block;
@@ -114,21 +157,27 @@ nav ul li{
     
 }
 
+nav ul li:hover{
+  filter: invert(18%) sepia(600%) saturate(200%) hue-rotate(330deg) brightness(80%) contrast(100%);
+}
 
-a{
+nav ul span a{
     text-decoration: none;
     color: white;
     cursor: pointer;
 
 }
 
-.sticky {
-    position: fixed;
-    top: 0;
-    width: 100%;
-  }
-  
-  /* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
-.sticky + .content {
-    padding-top: 60px;
+
+.menuhover{
+  display: inline-block;
+  margin-left: 10px;
+  display: inline-block;
+  vertical-align: middle;
 }
+.menuhover:hover{
+  filter: invert(18%) sepia(600%) saturate(200%) hue-rotate(330deg) brightness(80%) contrast(100%);
+  cursor: pointer;
+ 
+}
+
