--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,9 @@ body{
     padding: 0;
 }
 :root{
-    background-color: rgb(28, 28, 28);
+    background-color: rgb(28, 28, 28); 
     border: none;
+    
     
 }
 
@@ -24,30 +25,77 @@ h2{
     font-weight: 100;
 }
 
-.slideshow img{
-    overflow: hidden;
-    width: 100%;
-    max-height: 90vh;
-    object-fit: cover;
-    
+
+.parallax {
+    background-image: url('images/slide-1-home.jpg');
+    min-height: 90vh;
+    background-attachment: fixed;
+    background-position: center ;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
-/* .parallax img{
-    width: 100%;
-    height: 100vh;
-    background-image: url("images/slide-1-home.jpg");
-    background-size: cover;
+/* .crossfade > figure {
+    animation: imageAnimation s linear infinite 0s;
+    backface-visibility: hidden;
+    background-position: top center;
+    color: transparent;
+    opacity: 0;
+    top: 0px;
+    z-index: 0;
+    min-width: max-content;
+    margin: 0;
     background-attachment: fixed;
+    background-position: center ;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+  }
+
+.crossfade > figure:nth-child(1) { 
+    background-image: url('images/slide-1-home.jpg');
+    min-height: 90vh;
+     
+
+}
+.crossfade > figure:nth-child(2) {
+    animation-delay: 6s;
+    background-image: url('images/slide-1-home.jpg');
+
+
+
+
+}
+
+@keyframes imageAnimation {
+    0% {
+      animation-timing-function: ease-in;
+      opacity: 0;
+    }
+    8% {
+      animation-timing-function: ease-out;
+      opacity: 1;
+    }
+    17% {
+      opacity: 1
+    }
+    25% {
+      opacity: 0
+    }
+    100% {
+      opacity: 0
+    }
 } */
 
-  
 .description {
-    color: rgb(255, 255, 255);
-    padding: 20px;
-    font-size: 16px;
+    color: #ffffff;
+    margin-top: 1px;
+    padding: 30px;
+    font-size: 1.2em;
     text-align: center;
     font-family: 'Plus Jakarta Sans', sans-serif;
     font-weight: 300;
+    min-height: 80px;
 }
   
 .featuredbutton{
@@ -63,17 +111,23 @@ h2{
     border-color: rgb(255, 255, 255);
     text-align: center;
     cursor: pointer;
-    width: 100%%;
-    font-size: 20px;
+    width: 70%;
+    font-size: 1.5em;
     justify-content: center;
     font-family: Plus Jakarta Sans;
     vertical-align: center;
     margin-bottom: 30px;
+    border-style: solid;
     
-
 }
   
+.card button:hover{
+    background-color: rgb(255, 255, 255);
+    color: black;
+
+}
 .cards {
+
     display: grid;
     justify-content: center;
     grid-template-columns: repeat(3, 1fr);   
@@ -90,11 +144,11 @@ h2{
      
 .card {  
     background-color: #000; 
-    
+
 }
 
-.cardimage{
-    max-height: 300px;
+.card img{
+    max-height: 100%;
     object-fit: cover;
     object-position: bottom;
 
