--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -3,6 +3,8 @@
 
 /* notice anouncement banner */
 .notice{
+  display: inline-block;
+  vertical-align: middle;
   background-color: rgb(199,172,104);
   width: 100%;  
   position: sticky;
@@ -13,19 +15,25 @@
   font-weight: 400;
   text-align: center;
   color: #f1f1f1;
-  vertical-align: middle;
+  
+  
+
 }
 
 
 .notice a{
   color: #ffffff;
   text-decoration: none;
-  vertical-align: middle;
   font-size: 0.8em;
   letter-spacing: 1px;
+  line-height: 20px;
+  vertical-align: baseline;
+
+  
 
 
 }
+
 
 header{
     position: sticky;
@@ -42,7 +50,7 @@ header{
     height: 100vh; 
     width: 0; /* width determined by the JavaScript */
     position: fixed;
-    z-index: 5; 
+    z-index: 300; 
     top: 2.1vh; 
     right:0;
     background-color: rgb(17, 17, 17); 
@@ -67,6 +75,7 @@ header{
   margin: 60px;
   margin-left: 20px;
   margin-bottom: 200px;
+  z-index: 500;
 }
   /* hoave navigation links change colour */
 .sidenav a:hover {
@@ -80,6 +89,7 @@ header{
     top: 4vh;
     margin-left: 287px;
     font-size: 36px;
+    font-weight: 100;
   }
   
   /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
@@ -129,11 +139,8 @@ nav ul {
     padding-top: 5px;
 }
 
-nav ul li:hover {
-  color: #ff0000;
-}
+
 .menuico{
-    
     cursor: pointer;
     display: inline-block;
 }
@@ -157,7 +164,7 @@ nav ul li{
     
 }
 
-nav ul li:hover{
+nav ul li:hover:not(#cart-count,.cart-badge){
   filter: invert(18%) sepia(600%) saturate(200%) hue-rotate(330deg) brightness(80%) contrast(100%);
 }
 
@@ -168,6 +175,11 @@ nav ul span a{
 
 }
 
+nav ul li button{
+  background-color: #81818100;
+  cursor: pointer;
+  border: none;
+}
 
 .menuhover{
   display: inline-block;
@@ -180,4 +192,102 @@ nav ul span a{
   cursor: pointer;
  
 }
+
+
+#search{
+  position: sticky;
+  top: 19.6vh;
+  width: 100%;
+  height: 80px;
+  z-index: 20;
+  background-color: #0000000a;
+  backdrop-filter: blur(20px);
+  transition: 0.5s;
+}
+
+.searchbox{
+  display: flex;
+  margin: auto;
+  font-family: 'Plus Jakarta Sans', sans-serif;
+  font-weight: 400;
+  color: white;
+  font-size: 2em;
+  border: none;
+  background-color: transparent;
+  text-align: center;
+  width: 80%;
+  height: 100%;
+  vertical-align: middle;
+  transition: 0.5s;
+  z-index: 20;
+
+  
+
+}
+
+.searchbox:focus{
+  outline: none;
+}
+
+.search-underline{
+  border-top: 0.1px solid rgb(60, 60, 60);
+  width: 80%;
+  opacity: 60%;
+  margin-top: -10px;
+  justify-content: center;
+  vertical-align: middle;
+  z-index: 21;
+
+  
+}
+
+#cart-count{
+  font-size: 0.6em;
+  color: rgb(0, 0, 0);
+  vertical-align: top;
+  text-align: center;
+  font-family: 'Plus Jakarta Sans', sans-serif;
+  font-weight: 600;
+  margin-left: -10px;
+  margin-top: -20px;
+
+}
+
+.cart-badge{
+  padding-left: 4px;
+  padding-right: 4px;
+  border-radius: 100%;
+  background-color: rgb(199,172,104);
+}
+
+
+
+
+@media only screen and (min-width: 1270px) {
+  .notice a{
+    color: #ffffff;
+    text-decoration: none;
+    font-size: 0.8em;
+    letter-spacing: 1px;
+    padding-top: 7px;
+    vertical-align: middle;
+  
+  
+  }
+
+}
+
+@media only screen and (min-width: 1800px) {
+  .notice a{
+    color: #ffffff;
+    text-decoration: none;
+    font-size: 1.1em;
+    letter-spacing: 1px;
+    line-height: 35px;
+    vertical-align: middle;
+
+  }
+
+}
+
 
