--- a/styles/catalogue.css
+++ b/styles/catalogue.css
@@ -23,22 +23,35 @@
 }
 
 .product-cards{
+    margin-top: 50px;
     display: grid;
     justify-content: center;
-    grid-template-columns: repeat(3, 1fr);   
+    grid-template-columns: repeat(3, 3fr);   
     grid-auto-rows: auto;  
     grid-gap: 40px;
     margin-left: 100px;
     max-width: 100%;
     align-items: center;
     margin-right: 100px;
-    filter: drop-shadow(0 0 0.75rem rgba(0, 0, 0, 0.517));
-    height: 500px;
+    filter: drop-shadow(0 0 0.75rem rgba(0, 0, 0, 0.296));
+    height: max-content;
 }
 
 .product-card{
-    background-color: #000; 
+    background-color: #141414; 
     position: relative;
+    
+}
+
+.product-card-img{
+    object-fit: contain;
+    overflow: hidden;
+}
+.product-card img{
+    transition: transform .5s;
+}
+.product-card img:hover{
+    transform: scale(1.1);
 }
 
 .product-card span {
@@ -56,6 +69,7 @@
 }
 
 .card-info{
+    margin-top: -10px;
     padding-left: 10px;
     padding-right: 10px;
 }
@@ -173,3 +187,134 @@
   border: 1px solid #4a4a4a;
   outline: none;
 }
+
+/* page number footer */
+
+.pagination {
+    display: inline-block;
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    margin-top: 100px;
+    margin-bottom: -60px;
+  }
+  
+.pagination a {
+    color: rgb(255, 255, 255);
+    font-family: 'Plus Jakarta Sans', sans-serif;
+    font-weight: 300;
+    float: left;
+    padding: 8px 16px;
+    text-decoration: none;
+    transition: background-color .3s;
+  
+}
+  
+.pagination a.active {
+    font-family: 'Plus Jakarta Sans', sans-serif;
+    font-weight: 500;
+    background-color: #C7AC68;
+    color: rgb(0, 0, 0);
+}
+  
+.pagination a:hover:not(.active) {
+      background-color: rgb(0, 0, 0);
+}
+
+
+    /*the container must be positioned relative:*/
+    .filters {
+      margin-left: 100px;
+      position: relative;
+    }
+    
+    .filters select {
+      display: none; /*hide original SELECT element:*/
+      
+    }
+
+    /* sort by */
+    .sortby {
+        position: relative;
+        margin-left: auto;
+        margin-right: 100px;
+
+      }
+      
+      .sortby select {
+        display: none; /*hide original SELECT element:*/
+      }
+
+    
+    .select-selected {             
+        background-color: #141414;
+        
+    }
+    
+    /*style the arrow inside the select element:*/
+    .select-selected:after {
+      position: absolute;
+      content: "";
+      top: 14px;
+      right: 10px;
+      width: 0;
+      height: 0;
+      border: 6px solid  transparent;
+      border-color: #fff transparent transparent transparent;
+    }
+    
+    /*point the arrow upwards when the select box is open (active):*/
+    .select-selected.select-arrow-active:after {
+      border-color: transparent transparent #C7AC68; 
+      top: 7px;
+    }
+    
+    /*style the items (options), including the selected item:*/
+    .select-items div,.select-selected {
+        color: #ffffff;
+        padding: 8px 16px;
+        border: 1px solid transparent;
+        border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
+        cursor: pointer;
+        user-select: none;
+        border-color: #ffffff3c;
+        border-width: 1px;
+        transition: background-color .3s;
+
+    }
+    
+    /*style items (options):*/
+    .select-items {
+      position: absolute;
+      background-color: #141414;
+      top: 100%;
+      left: 0;
+      right: 0;
+      z-index: 99;
+      
+    }
+    
+    /*hide the items when the select box is closed:*/
+    .select-hide {
+      display: none;
+    }
+    
+    .select-items div:hover, .same-as-selected {
+      background-color: rgba(226, 226, 226, 0.1);
+    }
+
+ 
+  
+.refine{
+    display: flex;
+    position: sticky;
+    margin-top: 30px;
+    top: 19vh; 
+    z-index: 80;
+    font-family: 'Plus Jakarta Sans', sans-serif;
+    font-weight: 300;
+    color: #ffffff;
+    font-size: 0.9em;
+    
+}
+
