--- a/styles/catalogue.css
+++ b/styles/catalogue.css
@@ -78,6 +78,7 @@
     font-weight: 400;
     font-size: 1.2em;
     color: white;
+    "none";
     
 }
 
@@ -116,7 +117,8 @@
     font-weight: 600;
     cursor: pointer;
     text-decoration: none;
-    padding: 10px;
+    padding: 15px;
+    
     margin-bottom: 12px;
     transition: background-color .3s;
 
@@ -223,98 +225,157 @@
 
 
     /*the container must be positioned relative:*/
-    .filters {
-      margin-left: 100px;
-      position: relative;
-    }
-    
-    .filters select {
-      display: none; /*hide original SELECT element:*/
-      
-    }
 
-    /* sort by */
-    .sortby {
-        position: relative;
-        margin-left: auto;
-        margin-right: 100px;
 
-      }
-      
-      .sortby select {
-        display: none; /*hide original SELECT element:*/
-      }
+
+
+
+
+*, *:after, *:before {
+    box-sizing: border-box;
+}
+
+.select-wrapper1 {
+    position: relative;
+    user-select: none;
+    width: 100%;
+    margin-left: 100px;
+}
+.select-wrapper2 {
+    margin-right: 100px;
+    position: relative;
+    user-select: none;
+    
+}
+.select {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    border-width: 1px;
+    border-style: solid;
+    border-color: #d9d9d9;
+    width: 250px;
+    height: 65px;
+
+}
+.select-trigger {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0px 30px 0 15px;
+    font-size: 20px;
+    font-weight: 300;
+    color: #ffffff;
+    height: 100%;
+    line-height: 60px;
+    background: #141414;
+    cursor: pointer;
+
+    text-align: left;
+}
+.custom-options {
+    position: absolute;
+    display: block;
+    top: 110%;
+    left: 0;
+    right: 0;
+    border: 1px solid #ffffff;
+    background: #fff;
+    transition: all 0.5s;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    z-index: 2;
+}
+.select.open .custom-options {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: all;
+}
+.custom-option {
+    position: relative;
+    display: block;
+    padding: 0 22px 0 22px;
+    font-size: 22px;
+    font-weight: 300;
+    color: #f5f5f5;
+    line-height: 60px;
+    background-color: #141414;
+    cursor: pointer;
+    transition: all 0.5s;
+}
+.custom-option:hover {
+    cursor: pointer;
+    background-color: #2f2f2f;
+}
+.custom-option.selected {
+    color: #ffffff;
+    background-color: #484848;
+}
+
+.arrow {
+    margin-left: auto;
+    position: relative;
+    height: 15px;
+    width: 15px;
+    transform: rotate(180deg);
+}
+.arrow::before, .arrow::after {
+    content: "";
+    position: absolute;
+    bottom: 0px;
+    width: 0.15rem;
+    height: 100%;
+    transition: all 0.5s;
+}
+.arrow::before {
+    left: -5px;
+    transform: rotate(45deg);
+    background-color: #ffffff;
+}
+.arrow::after {
+    left: 5px;
+    transform: rotate(-45deg);
+    background-color: #ffffff;
+}
+.open .arrow::after {
+    left: -5px;
+    transform: rotate(-45deg);
+    background-color: #C7AC68;
+
+}
+.open .arrow::before {
+    left: 5px;
+    transform: rotate(45deg);
+    background-color: #C7AC68;
+
+}
+
+.filters{
+    font-size: 0.7em;
+    margin-top: -10px;
+    margin-bottom: -35px;
+    color: #bbbbbb;
 
     
-    .select-selected {             
-        background-color: #141414;
-        
-    }
-    
-    /*style the arrow inside the select element:*/
-    .select-selected:after {
-      position: absolute;
-      content: "";
-      top: 14px;
-      right: 10px;
-      width: 0;
-      height: 0;
-      border: 6px solid  transparent;
-      border-color: #fff transparent transparent transparent;
-    }
-    
-    /*point the arrow upwards when the select box is open (active):*/
-    .select-selected.select-arrow-active:after {
-      border-color: transparent transparent #C7AC68; 
-      top: 7px;
-    }
-    
-    /*style the items (options), including the selected item:*/
-    .select-items div,.select-selected {
-        color: #ffffff;
-        padding: 8px 16px;
-        border: 1px solid transparent;
-        border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
-        cursor: pointer;
-        user-select: none;
-        border-color: #ffffff3c;
-        border-width: 1px;
-        transition: background-color .3s;
+}
 
-    }
-    
-    /*style items (options):*/
-    .select-items {
-      position: absolute;
-      background-color: #141414;
-      top: 100%;
-      left: 0;
-      right: 0;
-      z-index: 99;
-      
-    }
-    
-    /*hide the items when the select box is closed:*/
-    .select-hide {
-      display: none;
-    }
-    
-    .select-items div:hover, .same-as-selected {
-      background-color: rgba(226, 226, 226, 0.1);
-    }
-
- 
+.select-box{
+    vertical-align: middle;
+}
   
 .refine{
     display: flex;
     position: sticky;
+    justify-content: center;
     margin-top: 30px;
-    top: 19vh; 
-    z-index: 80;
+    top: 20vh; 
+    z-index: 2;
     font-family: 'Plus Jakarta Sans', sans-serif;
     font-weight: 300;
     color: #ffffff;
     font-size: 0.9em;
+
     
 }
 
