--- a/styles/product.css
+++ b/styles/product.css
@@ -1,20 +1,29 @@
 .product-img img{
     max-width: 100vw;
 
+   
+}
+
+.product-img{
+    display: flex;
+    position: sticky;
+    top: 20vh; 
+    z-index: -1;
 }
 
 .product-layout{
     display: grid;
-    padding-left: 100px;
-    padding-right: 100px;
+    padding-left: 75px;
+    padding-right: 75px;
     grid-template-columns: 1fr 1fr;
     padding-top: 10px;
+    background-color: rgb(28, 28, 28); 
 }
 
 .product-title{
     color: white;
     font-family: 'Runalto', serif;
-    font-weight: 400;
+    font-weight: 900;
     font-size: 2.5em;
 }
 
@@ -26,7 +35,7 @@
 .product-add{
     display: flex;
     justify-content: center;
-    width: 60%;
+    width: 70%;
     color: rgb(0, 0, 0);
     font-size: 1.1em;
     background-color: #C7AC68;
@@ -52,10 +61,11 @@
 }
 .product-left img{
     display: inline;
-    width: 80%;
+    width: 90%;
     object-fit: contain;
     overflow: hidden;
     justify-content: left;
+    margin-bottom: 50px;
 
 }
 
@@ -102,7 +112,7 @@
     transform: scale(1.8);
 }
 .rating-amount-product{
-    margin-top: 3px;
+    margin-top: 5px;
     justify-items: right;
     padding-left: 8px;
     font-family: 'Plus Jakarta Sans', sans-serif;
@@ -152,4 +162,277 @@
 .color-mat button:focus {
   border: 2px solid #6d6d6d;
   outline: none;
+}
+
+
+
+*, *:after, *:before {
+    box-sizing: border-box;
+}
+
+
+.quantity-wrapper{
+    display: flex;
+    position: relative;
+    user-select: none;
+    font-family: 'Plus Jakarta Sans', sans-serif;
+    font-weight: 300;
+    font-size: 0.9em;
+    justify-content: right;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+.select {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    border-width: 1px;
+    border-style: solid;
+    border-color: #d9d9d9;
+    width: 70%;
+    height: 65px;
+
+}
+.select-trigger {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0px 30px 0 15px;
+    font-size: 20px;
+    font-weight: 300;
+    color: #ffffff;
+    height: 100%;
+    line-height: 60px;
+    background: #141414;
+    cursor: pointer;
+
+    text-align: left;
+}
+.custom-options {
+    position: absolute;
+    display: block;
+    top: 110%;
+    left: 0;
+    right: 0;
+    border: 1px solid #ffffff;
+    background: #fff;
+    transition: all 0.5s;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    z-index: 2;
+}
+.select.open .custom-options {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: all;
+}
+.custom-option {
+    position: relative;
+    display: block;
+    padding: 0 22px 0 22px;
+    font-size: 22px;
+    font-weight: 300;
+    color: #f5f5f5;
+    line-height: 60px;
+    background-color: #141414;
+    cursor: pointer;
+    transition: all 0.5s;
+}
+.custom-option:hover {
+    cursor: pointer;
+    background-color: #2f2f2f;
+}
+.custom-option.selected {
+    color: #ffffff;
+    background-color: #484848;
+}
+
+.arrow {
+    margin-left: auto;
+    position: relative;
+    height: 15px;
+    width: 15px;
+    transform: rotate(180deg);
+}
+.arrow::before, .arrow::after {
+    content: "";
+    position: absolute;
+    bottom: 0px;
+    width: 0.15rem;
+    height: 100%;
+    transition: all 0.5s;
+}
+.arrow::before {
+    left: -5px;
+    transform: rotate(45deg);
+    background-color: #ffffff;
+}
+.arrow::after {
+    left: 5px;
+    transform: rotate(-45deg);
+    background-color: #ffffff;
+}
+.open .arrow::after {
+    left: -5px;
+    transform: rotate(-45deg);
+    background-color: #C7AC68;
+
+}
+.open .arrow::before {
+    left: 5px;
+    transform: rotate(45deg);
+    background-color: #C7AC68;
+
+}
+
+.select-box{
+    vertical-align: middle;
+}
+
+.filters{
+    font-size: 0.7em;
+    margin-top: -10px;
+    margin-bottom: -35px;
+    color: #bbbbbb;
+
+}
+
+
+.c-wrapper{
+    height: max-content;
+    background-color: rgb(28, 28, 28);
+
+}
+.collapsible-container{
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(28, 28, 28);
+    padding-left: 75px;
+    padding-right: 75px;
+}
+.collapsible {
+
+    background-color: rgb(0, 0, 0); 
+    color: white;
+    cursor: pointer;
+    padding: 22px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-family: 'Plus Jakarta Sans', sans-serif;
+    font-weight: 400;
+    font-size: 1.5em;
+  }
+  
+  .active, .collapsible:hover {
+    background-color: rgb(24, 24, 24);
+  }
+  
+  .collapsible:after {
+    content: '\002B';
+    color: white;
+    font-weight: bold;
+    float: right;
+    margin-left: 5px;
+  }
+  
+  .active:after {
+    content: "\2212";
+  }
+  
+  .content {
+    padding: 0 22px;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.3s ease-out;
+    background-color: #292929;
+  }
+
+  .vertical {
+    border-left: 1px solid rgba(255, 255, 255, 0.2);
+    height: 500px;
+    margin-top: 50px;
+    position:absolute;
+    left: 55%;
+}
+
+.back-text{
+    vertical-align: bottom;
+    align-items: center;
+    font-family: 'Plus Jakarta Sans', sans-serif;
+    font-weight: 300;
+    text-decoration: none;
+    color: #C7AC68;
+    letter-spacing: 2px;
+}
+
+.back-span{
+    margin-top: 20px;
+    margin-bottom: -10px;
+}
+
+.back {
+    border: solid #C7AC68;
+    border-width: 0 1px 1px 0;
+    display: inline-block;
+    padding: 5px;
+    
+  }
+
+.back:hover ,.back-text:hover{
+    border-color: white;
+    color: white;
+
+}
+
+
+
+.left {
+    transform: rotate(135deg);
+    -webkit-transform: rotate(135deg);
+  }
+
+.related-container{
+    padding: 75px;
+    padding-bottom: 0;
+    margin-top: 0px;
+    width: 100vw;
+    background-color: rgb(28, 28, 28);
+}
+  .related-cards{
+    margin-top: 50px;
+    display: grid;
+    justify-content: center;
+    grid-template-columns: repeat(3, 3fr);   
+    grid-auto-rows: auto;  
+    grid-gap: 40px;
+    max-width: 100%;
+    align-items: center;
+    filter: drop-shadow(0 0 0.75rem rgba(0, 0, 0, 0.296));
+    height: max-content;
+    background-color: 
+}
+
+.related-card{
+    background-color: rgb(28, 28, 28);
+    position: relative;
+    
+}
+
+.related-card-img{
+    object-fit: contain;
+    overflow: hidden;
+
+}
+.related-card img{
+    transition: transform .5s;
+}
+.related-card img:hover{
+    transform: scale(1.1);
+}
+
+
 }
