--- a/styles/styles.css
+++ b/styles/styles.css
@@ -71,57 +71,7 @@ h6{
     background-size: cover;
 }
 
-/* .crossfade > figure {
-    animation: imageAnimation s linear infinite 0s;
-    backface-visibility: hidden;
-    background-position: top center;
-    color: transparent;
-    opacity: 0;
-    top: 0px;
-    z-index: 0;
-    min-width: max-content;
-    margin: 0;
-    background-attachment: fixed;
-    background-position: center ;
-    background-repeat: no-repeat;
-    background-size: cover;
 
-  }
-
-.crossfade > figure:nth-child(1) { 
-    background-image: url('images/slide-1-home.jpg');
-    min-height: 90vh;
-     
-
-}
-.crossfade > figure:nth-child(2) {
-    animation-delay: 6s;
-    background-image: url('images/slide-1-home.jpg');
-
-
-
-
-}
-
-@keyframes imageAnimation {
-    0% {
-      animation-timing-function: ease-in;
-      opacity: 0;
-    }
-    8% {
-      animation-timing-function: ease-out;
-      opacity: 1;
-    }
-    17% {
-      opacity: 1
-    }
-    25% {
-      opacity: 0
-    }
-    100% {
-      opacity: 0
-    }
-} */
 
 .description {
     color: #ffffff;
@@ -252,3 +202,43 @@ h6{
     color: #ffffff;
 }
 
+.left {
+    transform: rotate(135deg);
+    -webkit-transform: rotate(135deg);
+  }
+
+.back-text{
+    vertical-align: bottom;
+    align-items: center;
+    font-family: 'Plus Jakarta Sans', sans-serif;
+    font-weight: 300;
+    text-decoration: none;
+    color: #C7AC68;
+    letter-spacing: 2px;
+}
+
+.back-span{
+    margin-top: 20px;
+    margin-bottom: -10px;
+}
+
+.back {
+    border: solid #C7AC68;
+    border-width: 0 1px 1px 0;
+    display: inline-block;
+    padding: 5px;
+    
+  }
+
+.back:hover ,.back-text:hover{
+    border-color: white;
+    color: white;
+
+}
+
+
+
+
+@media screen (max-width: 991px){
+    
+}
