--- a/styles/product.css
+++ b/styles/product.css
@@ -1,5 +1,5 @@
 .product-img img{
-    max-width: 100vw;
+    max-width: 100%;
 
    
 }
@@ -359,47 +359,15 @@
     left: 55%;
 }
 
-.back-text{
-    vertical-align: bottom;
-    align-items: center;
-    font-family: 'Plus Jakarta Sans', sans-serif;
-    font-weight: 300;
-    text-decoration: none;
-    color: #C7AC68;
-    letter-spacing: 2px;
-}
-
-.back-span{
-    margin-top: 20px;
-    margin-bottom: -10px;
-}
-
-.back {
-    border: solid #C7AC68;
-    border-width: 0 1px 1px 0;
-    display: inline-block;
-    padding: 5px;
-    
-  }
-
-.back:hover ,.back-text:hover{
-    border-color: white;
-    color: white;
-
-}
 
 
 
-.left {
-    transform: rotate(135deg);
-    -webkit-transform: rotate(135deg);
-  }
 
 .related-container{
     padding: 75px;
     padding-bottom: 0;
     margin-top: 0px;
-    width: 100vw;
+    width: 100%;
     background-color: rgb(28, 28, 28);
 }
   .related-cards{
