--- a/styles/cart.css
+++ b/styles/cart.css
@@ -30,7 +30,7 @@
     width: 100%;
     border-collapse: collapse;
     table-layout: fixed;
-    white-space: nowrap:
+    white-space: nowrap;
 
 }
 #cart table img{
