--- a/styles/catalogue.css
+++ b/styles/catalogue.css
@@ -16,10 +16,9 @@
 }
 
 .table-caption{
-    padding: 0;
+    padding: 0px 30px 30px 30px;
     margin-top: -40px;
     text-align: center;
-    padding-bottom: 30px;
 }
 
 .product-cards{
@@ -78,7 +77,6 @@
     font-weight: 400;
     font-size: 1.2em;
     color: white;
-    "none";
     
 }
 
@@ -296,7 +294,7 @@
     position: relative;
     display: block;
     padding: 0 22px 0 22px;
-    font-size: 22px;
+    font-size: 20px;
     font-weight: 300;
     color: #f5f5f5;
     line-height: 60px;
@@ -379,3 +377,79 @@
     
 }
 
+
+@media screen and (max-width: 900px){
+    .product-cards{
+        grid-template-columns: repeat(2, 2fr); 
+ 
+        
+    }
+}
+@media screen and (max-width: 800px){
+    .product-cards{
+        grid-template-columns: repeat(2, 2fr); 
+        margin-left: 60px;
+        margin-right: 60px;
+        
+    }
+    .select-wrapper1 {
+        position: relative;
+        user-select: none;
+        width: 100%;
+        margin-left: 60px;
+    }
+    .select-wrapper2 {
+        margin-right: 60px;
+        position: relative;
+        user-select: none;
+        
+    }
+    .select {
+        width: 200px;
+       }
+}
+
+@media screen and (max-width: 640px){
+    .product-cards{
+        grid-template-columns: repeat(1, 1fr); 
+     
+        
+    }
+}
+@media screen and (max-width: 550px){
+    .product-cards{
+        grid-template-columns: repeat(1, 1fr); 
+        margin-left: 30px;
+        margin-right: 30px;  
+        
+    }
+    .select-wrapper1 {
+        position: relative;
+        user-select: none;
+        width: 100%;
+        margin-left: 30px;
+    }
+    .select-wrapper2 {
+        margin-right: 30px;
+        position: relative;
+        user-select: none;
+        
+    }
+    .select {
+        width: 150px;
+       }
+    .refine{
+        margin-top: 30px;
+            top: 16vh; 
+            z-index: 2;
+    }
+    .select-trigger {
+        font-size: 15px;
+    
+    }
+    .custom-option {
+
+        font-size: 15px;
+    
+    }
+}
