--- a/styles/footer.css
+++ b/styles/footer.css
@@ -69,7 +69,7 @@ form input:focus{
 }
 
 form img{
-    width: 30px;
+    width: 40px;
     vertical-align: middle;
     filter: opacity(50%);
     padding: 5px;
@@ -93,7 +93,8 @@ form img{
     text-align: center;
     font-family: 'Plus Jakarta Sans', sans-serif;
     font-weight: 400;
-    padding-top: 8px;
+    padding-top: 11px;
+    vertical-align: middle;
     cursor: pointer;
     transition: background-color .3s;
 
@@ -157,4 +158,54 @@ form img{
 }
 .social ul{
     margin-left: -40px;
+}
+
+
+@media screen and (max-width: 2000px){
+
+}
+  
+@media screen and (max-width: 1300px){
+    
+}
+  
+
+@media screen and (max-width: 1111px){
+
+    .signuplayout{
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+        width: max-content;
+        
+        
+    }
+    .footer1{
+        display: grid;
+        grid-template-columns: 1fr; 
+        grid-auto-rows: auto;  
+    
+    }
+}
+
+  
+  
+@media screen and (max-width: 909px){
+
+    
+  
+
+    @media screen and (max-width: 579px){
+
+        .signuplayout{
+            display: grid;
+            grid-template-columns: 3fr 1fr;
+            width: 100%;
+            
+        }
+        footer{
+      
+            padding: 40px;
+            margin-top: 100px;
+        }
+    }
 }
