--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -59,8 +59,30 @@ header{
     transition: 0.5s; /* animation transition time */
 }
   
+
+.cartslide {
+  height: 0; 
+  width: 100%; /* width determined by the JavaScript */
+  position: fixed;
+  z-index: 300; 
+  bottom: 0;
+  background-color: rgb(17, 17, 17); 
+  overflow-x: hidden; /* stops horizontal scrolling */
+  padding-top: -50px; 
+  transition: 0.5s; /* animation transition time */
+}
   /* The navigation menu links */
 .sidenav a {
+    font-family: 'Plus Jakarta Sans', sans-serif;
+    font-weight: 500;
+    padding: 8px 8px 30px 50px; 
+    text-decoration: none;
+    font-size: 1.3em;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+}
+.cartslide a {
     font-family: 'Plus Jakarta Sans', sans-serif;
     font-weight: 500;
     padding: 8px 8px 30px 50px; 
@@ -77,6 +99,12 @@ header{
   margin-bottom: 200px;
   z-index: 500;
 }
+.cartmenu{
+  margin: 60px;
+  margin-left: 20px;
+  margin-bottom: 200px;
+  z-index: 500;
+}
   /* hoave navigation links change colour */
 .sidenav a:hover {
   color: #f1f1f1;
@@ -84,6 +112,14 @@ header{
   
   /* side navigation close button */
   .sidenav .closebtn {
+    z-index: 200;
+    position: sticky;
+    top: 4vh;
+    margin-left: 287px;
+    font-size: 36px;
+    font-weight: 100;
+  }
+  .cartslide .closebtn {
     z-index: 200;
     position: sticky;
     top: 4vh;
@@ -150,7 +186,6 @@ nav ul span ai{
     display: inline-block;
     margin-left: 10px;
     margin-right: 10px;
-    display: inline-block;
     vertical-align: middle;
     
 }
@@ -260,9 +295,76 @@ nav ul li button{
   background-color: rgb(199,172,104);
 }
 
+.cart-footer{
+  right: 100;
+  justify-content: right;
+  z-index: 500;
 
 
+}
 
+.cart-section{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  background-color:#212121;
+  position: sticky;
+  top: 90vh;
+  margin-top: -50px;
+  z-index: 1000;
+  padding: 20px 20px 20px 20px;
+  
+
+}
+
+.cart-number{
+  display: inline;
+  vertical-align: middle;
+  font-family: 'Plus Jakarta Sans', sans-serif;
+  font-weight: 600;
+  font-size: 1em;
+  color: #C7AC68;
+  margin-left: 10px;
+  padding: 18px 24px 18px 24px;
+  border: solid 1px white;
+}
+.cart-section img{
+  width: 30px;
+  z-index: 1000;
+  vertical-align: middle;
+  padding: 14px;
+  border: solid 1px white;
+}
+.cart-panel{
+  background-color:#212121;
+  vertical-align: middle;
+  justify-content: right;
+  color: rgb(0, 0, 0);
+  font-size: 1.1em;
+  border: 2px solid #C7AC68;;
+  background-color: #1b1b1b;
+  text-align: center;
+  z-index: 1000;
+
+  cursor: pointer;
+
+  padding: 0px;
+  margin-bottom: 12px;
+
+}
+
+.cart-panel a p{
+  z-index: 500;
+
+  text-decoration: none;
+  font-family: 'Plus Jakarta Sans', sans-serif;
+  font-weight: 600;
+  color: #C7AC68;;
+  letter-spacing: 2px;
+
+}
+
+
+  
 @media screen and (max-width: 2000px){
   .notice a{
     color: #ffffff;
@@ -271,9 +373,21 @@ nav ul li button{
     letter-spacing: 1px;
     line-height: 35px;
     vertical-align: middle;
+    
 
   }
+  .cart-section{
+    display: none;
+  }
+  .cart-footer{
+    display: none;
 
+  }
+  #search{
+    position: sticky;
+    top: 15vh;
+    margin-top: -80px;
+  }
 }
 
 @media screen and (max-width: 1300px){
@@ -282,10 +396,16 @@ nav ul li button{
     text-decoration: none;
     font-size: 0.8em;
     letter-spacing: 1px;
-    padding-top: 7px;
+    margin-top: -5px;
+    padding-top: 0px;
     vertical-align: middle;
-  
-  
+      line-height: 20px;
+
+  }
+  #search{
+    position: sticky;
+    top: 19.6vh;
+    margin-top: -80px;
   }
 
 }
@@ -293,3 +413,154 @@ nav ul li button{
 
 
 
+
+@media screen and (max-width: 767px){
+  .notice, nav ul li:nth-child(3), .menu:nth-child(1){
+    display: none;
+  }
+  .logo img{
+    width: 300px;
+
+  }
+  #search{
+    position: sticky;
+    top: 12.5vh;
+    margin-top: -80px;
+  }
+
+  
+  nav ul li{
+    margin-left: 20px;
+    margin-right: 20px;;
+
+      
+  }
+  
+  nav ul span ai{
+    display: inline-block;
+    margin-left: 0px;
+    margin-right: 10px;
+    vertical-align: middle;
+
+  }
+  header{
+    position: sticky;
+    top: 0vh; 
+    z-index: 100;
+    background-color: rgb(18, 18, 18);
+  }
+  .sidenav {
+    height: 100vh; 
+    width: 0; /* width determined by the JavaScript */
+    position: fixed;
+    z-index: 300; 
+    top: 0; 
+    right:0;
+    background-color: rgb(17, 17, 17); 
+    overflow-x: hidden; /* stops horizontal scrolling */
+    padding-top: -50px; 
+    transition: 0.5s; /* animation transition time */
+}
+  
+  .sidenav .closebtn {
+    z-index: 200;
+    position: sticky;
+    top: 1.7vh;
+    margin-left: 287px;
+    font-size: 36px;
+    font-weight: 100;
+  }
+
+  .cart-footer{
+    display: inline;
+
+  }
+  .cart-section{
+    display: grid;
+  }
+  
+ 
+}
+
+
+
+@media screen and (max-width: 579px){
+  .logo img{
+    margin-top: 5px;
+    width: 250px;
+    vertical-align: middle;
+
+  }
+
+  
+  nav ul li{
+    margin-left: 10px;
+    margin-right: 5px;;
+      
+  }
+
+  nav ul span ai{
+    margin-right: 10px;
+  }
+  header{
+    position: sticky;
+    top: 0vh; 
+    z-index: 100;
+    background-color: rgb(18, 18, 18);
+  }
+  
+  }
+
+
+@media screen and (max-width: 465px){
+  #search{
+    position: sticky;
+    top: 12vh;
+    margin-top: -100px;
+  }
+  nav ul li{
+    margin-left: 10px;
+    margin-right: 0px;
+      
+  }
+  nav ul span ai{
+    margin-right: 5px;
+  }
+  .logo img{
+    margin-top: 10px;
+    margin-left: -5px;
+    width: 220px;
+    vertical-align: middle;
+  }
+}
+
+@media screen and (max-width: 420px){
+
+  .cart-section{
+  
+    top: 88vh;
+
+  }
+  #search{
+    position: sticky;
+    top: 12vh;
+    margin-top: -80px;
+  }
+
+  nav ul li{
+    margin-left: 10px;
+    margin-right: 0px;
+      
+  }
+  nav ul span ai{
+    margin-right: 5px;
+
+  }
+  .logo img{
+    margin-right: -50px;
+    margin-top: 10px;
+    margin-left: -5px;
+    width: 200px;
+    vertical-align: middle;
+  }
+}
