--- a/styles/styles.css
+++ b/styles/styles.css
@@ -98,7 +98,7 @@ h6{
     outline: 0;
     padding: 12px;
     color: white;
-    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0);
     border-color: rgb(255, 255, 255);
     text-align: center;
     cursor: pointer;
@@ -139,7 +139,7 @@ h6{
      
      
 .card {  
-    background-color: #000; 
+    background-color: #141414
 
 }
 
@@ -239,6 +239,146 @@ h6{
 
 
 
-@media screen (max-width: 991px){
-    
+@media screen and (max-width: 2000px){
+
+}
+  
+@media screen and (max-width: 1300px){
+   
+}
+  
+@media screen and (max-width: 1100px){
+    .description {
+ 
+        font-size: 1.1em;
+     
+        min-height: 110px;
+    }
+    .card button {
+
+        width: 70%;
+        font-size: 1.1em;
+        
+    }
+}
+  
+@media screen and (max-width: 1000px){
+    .description {
+ 
+        font-size: 1.1em;
+     
+        min-height: 110px;
+    }
+    .card button {
+
+        width: 70%;
+        font-size: 1.1em;
+        
+    }
+    .cards {
+        display: grid;
+        justify-content: center;
+        grid-gap: 40px;
+        padding-left: 50px;
+        padding-right: 50px;
+
+        margin: 0;
+
+
+    }
+}
+  
+
+  
+
+
+  
+@media screen and (max-width: 767px){
+
+    .cards {
+        display: grid;
+        justify-content: center;
+        grid-template-columns: repeat(1, 1fr);   
+        grid-auto-rows: auto;  
+        
+    }
+    .description {
+        padding-left: 40px;
+        padding-right: 40px;
+        font-size: 1.8em;
+     
+        min-height: 110px;
+    }
+    .card button {
+
+        width: 70%;
+        font-size: 3em; 
+    }  
+         
+}
+  
+@media screen and (max-width: 580px){
+    .cards {
+        display: grid;
+        justify-content: center;
+        grid-gap: 40px;
+        padding-left: 40px;
+        padding-right: 40px;
+
+        margin: 0;
+
+        grid-template-columns: repeat(1, 1fr);   
+        grid-auto-rows: auto;  
+
+    }
+    h2{
+        padding-top: 20px;
+        font-size: 2em;
+    }
+    .description {
+        padding-left: 40px;
+        padding-right: 40px;
+        font-size: 1.5em;
+     
+        min-height: 110px;
+    }
+    .card button {
+
+        width: 70%;
+        font-size: 1.9em; 
+    }  
+
+}
+
+@media screen and (max-width: 420px){
+    .cards {
+        display: grid;
+        justify-content: center;
+        grid-gap: 50px;
+        padding-left: 40px;
+        padding-right: 40px;
+
+        margin: 0;
+
+        grid-template-columns: repeat(1, 1fr);   
+        grid-auto-rows: auto;  
+
+    }
+    h2{
+        padding-top: 20px;
+        font-size: 1.8em;
+    }
+    .description {
+        padding-left: 40px;
+        padding-right: 40px;
+        font-size: 1.1em;
+     
+        min-height: 100px;
+    }
+    .card button {
+
+        width: 80%;
+        font-size: 1.9em; 
+    }  
+
 }
