--- a/styles/footer.css
+++ b/styles/footer.css
@@ -209,3 +209,11 @@ form img{
         }
     }
 }
+
+
+@media screen and (max-width: 767px){
+    footer{
+        padding-bottom: 300px;
+    }
+
+}
