--- a/styles/product.css
+++ b/styles/product.css
@@ -86,6 +86,7 @@
     text-decoration: line-through;
     margin-right: 30px;
     text-decoration-thickness: 2px;
+    order: 0;
 
 }
 
@@ -166,9 +167,10 @@
 
 
 
-*, *:after, *:before {
+/* .c-wrapper, .c-wrapper:after, .c-wrapper:before  {
     box-sizing: border-box;
-}
+} */
+
 
 
 .quantity-wrapper{
@@ -189,7 +191,7 @@
     border-width: 1px;
     border-style: solid;
     border-color: #d9d9d9;
-    width: 70%;
+    width: 75%;
     height: 65px;
 
 }
@@ -300,11 +302,13 @@
 
 
 .c-wrapper{
+    display: flex;
     height: max-content;
     background-color: rgb(28, 28, 28);
 
 }
 .collapsible-container{
+    
     display: inline-block;
     width: 100%;
     height: 100%;
@@ -362,17 +366,26 @@
 
 
 
+.related-bg{
+    background-color: rgb(28, 28, 28);
 
+}
 .related-container{
+    display: inline;
     padding: 75px;
+    text-align: center;
     padding-bottom: 0;
     margin-top: 0px;
     width: 100%;
+    padding-right: 500px;
     background-color: rgb(28, 28, 28);
 }
   .related-cards{
-    margin-top: 50px;
+    position: relative;
     display: grid;
+    margin-top: 50px;
+    padding: 0 75px 0 75px;
+
     justify-content: center;
     grid-template-columns: repeat(3, 3fr);   
     grid-auto-rows: auto;  
@@ -411,13 +424,78 @@
         top: 15vh; 
         z-index: -1;
     }
+    .product-right h6{
+        display: none;
+    }
 }
 
 @media screen and (max-width: 1100px){
-
+    .price {
+        font-size: 1.8em;
+        margin-top: 40px;
+      }
+    
 }
 
+@media screen and (max-width: 800px){
+    
+    .price {
+        font-size: 1.6em;
+      }
+    
+    .select {
+        width: 70%;
+       }
+    .product-add{
+    width: 70%;
+    }
+    .price {
+        display: flex;
+        justify-content: left;
+        font-family: 'Plus Jakarta Sans', sans-serif;
+        font-weight: 500;
+        color:#C7AC68;
+    
+    }
+    .vertical{
+        display: none;
+    }
+    
+}
 @media screen and (max-width: 767px){
+    .product-img{
+       margin-top: -60px;
+    }
+    .product-title{
+  
+        font-size: 2em;
+        margin-top: 50px;
+    }
+    .product-left h6{
+        display: none;
+    }
+
+    .product-right h6{
+        display: flex;
+        margin-top: 10px;
+    }
+    .select {
+        width: 100%;
+       }
+    .product-add{
+    width: 100%;
+    margin-bottom: 20px;
+    }
+    .price {
+        font-size: 3em;
+        margin-top: -50px;
+
+      }
+    .price .price-strike{
+        order: 2;
+        margin-left: 50px;
+        
+    }
     .related-cards{
        
         grid-template-columns: repeat(1, 1fr);   
@@ -446,9 +524,10 @@
         display: none;
     }
     .product-button{
-        justify-content: right;
-        margin-top: -95px;
-        margin-bottom: 20px;
+        justify-content: middle;
+        width: 100%;
+
+    
         }
         .stars-wrap{  
           justify-content: left;
@@ -462,9 +541,7 @@
         }
         .quantity-wrapper{
             
-            display: inline-block;
-         justify-content: left;
-            width: 200px;
+         justify-content: middle;
         }
         .choose-color{
             text-align: left;
@@ -472,13 +549,63 @@
     
 }
 
-
-@media screen and (max-width: 767px){
-    .quantity-wrapper{
-        width: 150px;
-
+@media screen and (max-width: 580px){
+    .product-title{
+  
+        font-size: 2em;
+        margin-top: 50px;
+        margin-bottom: 40px;
     }
+    
+    .product-layout{
+       
+        padding-left: 45px;
+        padding-right: 45px;
+        
+    }
+    .select {
+        width: 100%;
+       }
     .product-add{
-    width: 50%;
+    width: 100%;
+    margin-bottom: 50px;
     }
+    .price {
+        font-size: 1.7em;
+
+      }
+
+    
+    .price .price-strike{
+        order: 2;
+        margin-left: 20px;
+        
+    }
+    .related-container{
+        padding: 45px;
+
+    }
+
+    .related-cards{
+        
+        padding: 0 45px 0 45px;
+    }
+    .collapsible-container{
+        padding-left: 45px;
+        padding-right: 45px;
+    }
+  
+
+
 }
+
+@media screen and (max-width: 490px){
+    .product-title{
+  
+        font-size: 1.7em;
+        margin-top: 50px;
+        margin-bottom: 40px;
+    }
+  
+}
+
