--- a/styles/checkout1.css
+++ b/styles/checkout1.css
@@ -96,6 +96,36 @@
     outline: none;
 }
 
+
+/* .row input:invalid{
+  border: 1px solid rgb(255, 0, 43);
+} */
+
+.row input[type=number],
+.row input[type=email]{
+  margin: 0 auto;
+  width: 100%;
+  padding: 12px;
+  padding-right: 0px;
+  margin-bottom: 20px;
+  background-color: #0c0c0c;
+  border: 1px solid #ccc;
+  border-radius: 0;
+  color: white;
+  font-size: 1em;
+  font-family: 'Plus Jakarta Sans', sans-serif;
+
+
+}
+
+.row input[type=number]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
+.row input[type=number]:focus{
+    outline: none;
+}
+
 label {
   margin-bottom: 10px;
   display: block;
